--- a/style.css
+++ b/style.css
@@ -39,13 +39,13 @@ h1 {
    
 }
 
-
+ 
 
 .cell {
     width: 50px;
     height: 50px;
     border: 1px solid black;
-    background-color: rgb(225, 203, 0);
+    background-color: rgb(255, 255, 255);
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -55,4 +55,7 @@ h1 {
 
 
 
-.cell.clicked{background-color: red;}
+.cell.clicked{background-color: rgb(255, 255, 255);}
+
+.cell.safe{background-color:dodgerblue;}
+.cell.bomb{background-color: red;}
